compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@immediate_arithmetic__const_lhs_sub.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/immediate_arithmetic/const_lhs_sub.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 10
getprop temp.8, 0
temp.9 = temp.7 - temp.8
storeprop temp.9, 0
temp.10 = int 256
getprop temp.11, 0
temp.12 = temp.10 - temp.11
storeprop temp.12, 0
return 


----------- immediate_arithmetic -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 10
getprop temp.8, 0
temp.13 = -temp.8
temp.9 = temp.13 + imm(10)
storeprop temp.9, 0
temp.10 = int 256
getprop temp.11, 0
temp.14 = -temp.11
temp.12 = temp.14 + simm(16)
storeprop temp.12, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.8, 0
temp.13 = -temp.8
temp.9 = temp.13 + imm(10)
storeprop temp.9, 0
getprop temp.11, 0
temp.14 = -temp.11
temp.12 = temp.14 + simm(16)
storeprop temp.12, 0
return
