compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@immediate_arithmetic__negative.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/immediate_arithmetic/negative.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.9, 0
temp.10 = int 1
temp.11 = -temp.10
temp.12 = temp.9 + temp.11
storeprop temp.12, 0
getprop temp.13, 0
temp.14 = int 5
temp.15 = -temp.14
temp.16 = temp.13 - temp.15
storeprop temp.16, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.9, 0
temp.10 = int 1
temp.11 = int -1
temp.12 = temp.9 + temp.11
storeprop temp.12, 0
getprop temp.13, 0
temp.14 = int 5
temp.15 = int -5
temp.16 = temp.13 - temp.15
storeprop temp.16, 0
return 


----------- immediate_arithmetic -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.9, 0
temp.10 = int 1
temp.11 = int -1
temp.12 = temp.9 - imm(1)
storeprop temp.12, 0
getprop temp.13, 0
temp.14 = int 5
temp.15 = int -5
temp.16 = temp.13 + imm(5)
storeprop temp.16, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getprop temp.9, 0
temp.12 = temp.9 - imm(1)
storeprop temp.12, 0
getprop temp.13, 0
temp.16 = temp.13 + imm(5)
storeprop temp.16, 0
return
